# cape

./: .gitignore  API.docx  CMakeLists.txt  README.md  main.cpp
include/: Common.h  Dog.h  DogLog.h  Log.h  RestDog.h  RestKeeper.h  RestWatcher.h  Tools.h  WorkFlow.h
src/: Common.cpp  Dog.cpp  DogLog.cpp  Log.cpp  RestDog.cpp  RestKeeper.cpp  RestWatcher.cpp  WorkFlow.cpp
test/: CMakeLists.txt  main.cpp
